--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.15",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.2.6",
     "daisyui": "^1.10.0",
     "eslint": "7.32.0",
