--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-resize-detector": "^6.7.6",
     "recoil": "^0.4.0"
   },
   "devDependencies": {
