--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "^12.0.2",
     "react": "17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-resize-detector": "^6.7.6",
     "recoil": "^0.4.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
+    "@types/react-custom-scrollbars": "^4.0.9",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.2.6",
     "daisyui": "^1.10.0",
